@@ -62,6 +62,10 @@ height: 65px;
 margin-top: -5px;	
 }
 
+.caps {
+text-transform: uppercase;
+}
+
 footer{
 width: 100%;
 z-index: 25;
@@ -1117,6 +1121,14 @@ color:#43EDAB !important;
 -ms-transition-duration: .6s;
 }
 
+.greyvertical .field-name-body .field-items .even {
+font-size: 1.2rem !important;
+padding-left: 20px !important;
+padding-top: 10px !important;
+color: #888;
+font-family: 'Ubuntu',sans-serif;
+padding-bottom: 20px !important;
+}
 
 /* stripe */
 
@@ -2459,7 +2471,7 @@ html[xmlns] .slides {display: block;}
 
 /* Direction Nav */
 .flex-direction-nav {*height: 0;}
-.flex-direction-nav a {width: 30px; height: 30px; margin: -20px 0 0; display: block; background: url(images/bg_direction_nav.png) no-repeat 0 0; position: absolute; top: 50%; z-index: 10; cursor: pointer; text-indent: -9999px; opacity: 0; -webkit-transition: all .3s ease;}
+.flex-direction-nav a {width: 30px; height: 30px; margin: -20px 0 0; display: block; background: url(../images/bg_direction_nav.png) no-repeat 0 0; position: absolute; top: 50%; z-index: 10; cursor: pointer; text-indent: -9999px; opacity: 0; -webkit-transition: all .3s ease;}
 .flex-direction-nav .flex-next {background-position: 100% 0; right: -36px; }
 .flex-direction-nav .flex-prev {left: -36px;}
 .flexslider:hover .flex-next {opacity: 0.8; right: 5px;}
