@@ -9,7 +9,7 @@
   <?php print render($content['field_portfolio_stripe_image']); ?>
   <a href="<?php print $node_url;?>" title="View Project">
   <div class="infowhite midpadding leftpadding rightpadding">
-    <h5 class="blacktext extrabold smalltoppadding midtoppadding"><?php print $title; ?></h5>
+    <h5 class="blacktext extrabold smalltoppadding midtoppadding caps"><?php print $title; ?></h5>
 		<h6 class="blacktext"><?php echo $tags; ?></h6><br>
 		<span class="blacktext smallfont">VIEW PROJECT</span>
 	</div>
