@@ -1,8 +1,9 @@
 ===Montreal Changelog===
 
 1.1.3 (07/27/13)
-  *New theme jQuery update function negating the need for the jQuery Update module.
-  *Improvements to page and node template files.
+  *Improvements to page, node and taxonomy template files.
+  *Fixed some broken image paths.
+  *Portfolio improvements.
 
 1.1.2 (06/27/13)
   *Stylesheets called in .info file instead of preprocess function to fix issue with caching.
